--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcc 'PT'
 - !lcsh 'Adventure stories'
 - !lcsh 'Middle East -- Fiction'
+- GITenberg
 title: Door het land der Skipetaren
 url: http://www.gutenberg.org/ebooks/27652
